API for managing Apps
